--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body h1,h2,h3,h4,h5,h6{
 }
 /*-- header --*/
 #home {
-    background: url(../images/header-bg.jpg) no-repeat center top;
+	background: url(../images/header-bg.jpg) no-repeat center top;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -59,15 +59,16 @@ body h1,h2,h3,h4,h5,h6{
 	display:inline-block;
 }
 .navigation-right ul li a{
-	color:#fff;
-    font-size:1em;
+	color:#3c3c3c;
+    font-size:1.2em;
     text-decoration: none;
     padding: 10px 0;
 	text-transform:uppercase;
+	font-weight: 600;
     font-family: 'Open Sans', sans-serif;
 }
 .navigation-right ul li.active a{
-	    color: #00a78e;
+	    color: #0055bd;
 }
 span.menu{
 	display:none;
@@ -88,8 +89,8 @@ span.menu{
 	overflow: hidden;
 	padding: 10px 0;
 	max-width: 0;
-	border-bottom: 3px solid #00a78e;
-    color: #00a78e;
+	border-bottom: 3px solid #0055bd;
+    color: #0055bd;
 	content: attr(data-hover);
 	-webkit-transition: max-width 0.5s;
 	-moz-transition: max-width 0.5s;
@@ -100,8 +101,8 @@ span.menu{
 }
 /*--banner-info--*/
 .banner-info {
-    background:rgba(23, 20, 20, 0.58);
-    margin-top: 4em;
+    background:rgba(23, 20, 20, 0.6);
+    margin-top: 3.5em;
 }
 .header-left {
     padding: 3em;
@@ -125,13 +126,13 @@ ul.address {
 .header-right h1 {
     font-size: 2.5em;
     color: #fff;
-    margin: 0.5em 0 0;
+    margin: 0em 0 0;
     font-weight: bold;
 }
 .header-right h1 {
-    font-size: 1.2em;
+    font-size: 2em;
     color: #FFF;
-    background: #00a78e;
+    background: #00b0f5;
     display: inline-block;
     padding: .5em 1.5em;
     position: relative;
@@ -146,7 +147,7 @@ ul.address {
     left: 12px;
     border-style: solid;
     border-width: 14px 11px 0 12px;
-    border-color: #00a78e transparent transparent transparent;
+    border-color: #00b0f5 transparent transparent transparent;
 }
 .service-head h4 {
     font-size: 1.2em;
@@ -172,7 +173,7 @@ ul.address {
 .header-right h6 {
        font-size: 1em;
     color: #C7C7C7;
-    margin-top: 0.8em;
+    margin-top: 2.5em;
     letter-spacing: 3px;
     text-transform: uppercase;
 }
