--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body h1,h2,h3,h4,h5,h6{
 	 color:#fff;
 }
 .logo span {
-    border: 7px solid #00a78e;
+    border: 7px solid #0055bd;
     padding: 0px 14px;
     font-size: 1.2em;
     color: #fff;
@@ -59,16 +59,16 @@ body h1,h2,h3,h4,h5,h6{
 	display:inline-block;
 }
 .navigation-right ul li a{
-	color:#3c3c3c;
+	color:rgb(114, 114, 114);
     font-size:1.2em;
     text-decoration: none;
-    padding: 10px 0;
+    padding: 2px 0;
 	text-transform:uppercase;
 	font-weight: 600;
     font-family: 'Open Sans', sans-serif;
 }
 .navigation-right ul li.active a{
-	    color: #0055bd;
+	color: #0055bd;
 }
 span.menu{
 	display:none;
@@ -83,11 +83,12 @@ span.menu{
     font-family: 'Open Sans', sans-serif;
 }
 .link-effect-3 a::before {
+	/* background: #C7C7C7 */
 	position: absolute;
 	top: 0;
 	left: 0;
 	overflow: hidden;
-	padding: 10px 0;
+	padding: 2px 0;
 	max-width: 0;
 	border-bottom: 3px solid #0055bd;
     color: #0055bd;
@@ -136,29 +137,10 @@ ul.address {
     display: inline-block;
     padding: .5em 1.5em;
     position: relative;
-	    box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+	box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
-.header-right h1:before {
-       width: 0;
-    height: 0;
-    position: absolute;
-    content: '';
-    bottom: -9px;
-    left: 12px;
-    border-style: solid;
-    border-width: 14px 11px 0 12px;
-    border-color: #00b0f5 transparent transparent transparent;
-}
-.service-head h4 {
-    font-size: 1.2em;
-    color: #FFF;
-    background: #00a78e;
-    display: inline-block;
-    padding: .5em 1.5em;
-    position: relative;
-	    box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-}
-.service-head h4:before {
+/* small triangle mark below the title 
+/* .header-right h1:before {
     width: 0;
     height: 0;
     position: absolute;
@@ -167,11 +149,31 @@ ul.address {
     left: 12px;
     border-style: solid;
     border-width: 14px 11px 0 12px;
-    border-color: #00a78e transparent transparent transparent;
-	
+    border-color: #00b0f5 transparent transparent transparent;
+} */
+.service-head h4 {
+	font-size: 1.2em;
+    color: #00b0f5;
+    /* background: #0073ff; */
+    display: inline-block;
+	padding: 0.5em 1.2em;
+    position: relative;
+	/* box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19); */
 }
+/* .service-head h4:before {
+    width: 0;
+    height: 0;
+    position: absolute;
+    content: '';
+    bottom: -9px;
+    left: 12px;
+    border-style: solid;
+    border-width: 14px 11px 0 12px;
+    border-color: #00b0f5 transparent transparent transparent;
+	
+} */
 .header-right h6 {
-       font-size: 1em;
+    font-size: 1em;
     color: #C7C7C7;
     margin-top: 2.5em;
     letter-spacing: 3px;
@@ -200,7 +202,7 @@ ul.address li ul.address-text li a {
 	text-decoration:none;
 }
 ul.address li ul.address-text li a:hover{
-        color: #00a78e;
+        color: #00b0f5;
 }
 ul.address-text b {
     color:#fff;
@@ -209,7 +211,7 @@ ul.address-text b {
 ul.social-icons{
 	    display: block;
     padding: 0;
-    background:#00a78e;
+    background:#00b0f5;
     padding:1.3em 0;
     text-align: center;
 	margin:0;
@@ -251,7 +253,7 @@ ul.social-icons{
 background-position: 3px -94px;
 }
 .social-icons li a:hover::before {
-    border-color: #00a78e;
+    border-color: #00b0f5;
 	    box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
 /*-- wellcome-note --*/
@@ -303,7 +305,7 @@ background-position: 3px -94px;
     color: #777;
 }
 .news-text h3  a,ul.news li:hover  i{
-	 color:#00a78e;
+	 color:#00b0f5;
 	 text-decoration:none;
 }
 ul.news li {
@@ -323,8 +325,8 @@ ul.news li i{
 a.read {
     padding: 0.5em 1.5em;
     font-size: 1em;
-    color: #00a78e;
-    border: 2px solid #00a78e;
+    color: #00b0f5;
+    border: 2px solid #00b0f5;
     text-decoration: none;
     border-radius: 1.5em;
     -webkit-border-radius: 1.5em;
@@ -333,7 +335,7 @@ a.read {
     -ms-border-radius: 1.5em;
 }
 a.read:hover {
-	background:#00a78e;
+	background:#00b0f5;
 	color:#fff;
 }
 ul.news {
@@ -362,7 +364,7 @@ ul.news {
     font-size:0.9em;
 }
 h4.tittle  {
-    color: #00a78e;
+    color: #00b0f5;
     text-decoration: none;
     font-size: 1.4em;
     margin: 1em 0 0.5em 0;
@@ -395,7 +397,7 @@ span.border {
  span.border:after {
        content: ' ';
     position: absolute;
-    background: #00a78e;
+    background: #00b0f5;
     height: 7px;
     display: block;
     width: 73px;
@@ -405,7 +407,7 @@ span.border {
 span.border.one:after {
     content: ' ';
     position: absolute;
-    background: #00a78e;
+    background: #00b0f5;
     height: 7px;
     display: block;
     width: 73px;
@@ -453,8 +455,8 @@ span.border.one:after {
 .about-left-grid ul li a {
        padding: 0.6em 2em;
     font-size: 1.2em;
-    color: #00a78e;
-    border: 2px solid #00a78e;
+    color: #00b0f5;
+    border: 2px solid #00b0f5;
     text-decoration: none;
     border-radius: 1.5em;
     -webkit-border-radius: 1.5em;
@@ -463,7 +465,7 @@ span.border.one:after {
     -ms-border-radius: 1.5em;
 }
 .about-left-grid ul li a:hover{
-	background:#00a78e;
+	background:#00b0f5;
 	color:#FFF;
 	border-radius:1.5em;
 	-webkit-border-radius:1.5em;
@@ -536,7 +538,7 @@ span.border.one:after {
 }
 .wthree_about_right_grid_left i{
 	font-size: 1.7em;
-	color:#00a78e;
+	color:#70b1ff;
 	top:.8em;
 }
 .wthree_about_right_grid:hover .wthree_about_right_grid_left i{
@@ -545,7 +547,7 @@ span.border.one:after {
 .wthree_about_right_grid_right h4{
 	text-transform: uppercase;
     font-size: 1.2em;
-    color: #00a78e;
+    color: #70b1ff;
     font-weight: bold;
 }
 .wthree_about_right_grid_right p{
@@ -571,7 +573,7 @@ span.border.one:after {
   backface-visibility: hidden;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
-  background:#00a78e;
+  background:#70b1ff;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
@@ -662,7 +664,7 @@ span.border.one:after {
   -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
       background: #fff;
-	  border-bottom: 5px solid #00a78e;
+	  border-bottom: 5px solid #00b0f5;
 }
 h4.timeline-title a {
     margin: 0;
@@ -906,7 +908,7 @@ ul.year li:nth-child(5){
     cursor: pointer;
     font-size: 18px;
     text-transform: uppercase;
-    border: 2px solid #00a78e;
+    border: 2px solid #00b0f5;
     display: inline-block;
     text-align: center;
     list-style: none;
@@ -921,8 +923,8 @@ ul.year li:nth-child(5){
 }
 .resp-tab-active,.resp-tab-item:hover{
 	color: #fff;
-       border: 2px solid #00a78e;
-    background:#00a78e;
+       border: 2px solid #00b0f5;
+    background:#00b0f5;
 }
 .resp-tabs-container {
 	padding: 0px;
@@ -1093,7 +1095,7 @@ div#portfolioModal1,div#portfolioModal2,div#portfolioModal3,div#portfolioModal4,
 }
 .contact-grid1-left1 span {
     font-size: 1.5em;
-      color: #00a78e;
+      color: #00b0f5;
 }
 .contact-grid1-left1 ul{
 	padding:0;
@@ -1109,7 +1111,7 @@ div#portfolioModal1,div#portfolioModal2,div#portfolioModal3,div#portfolioModal4,
 }
 .contact-grid1-left1 a {
       font-size: 14px;
-    color: #00a78e;
+    color: #00b0f5;
     text-decoration: none;
 }
 ul.social-icons.two {
@@ -1131,7 +1133,7 @@ ul.social-icons.two {
     padding: 19px 10px;
     margin-bottom: 24px;
     outline: none;
-    border: 2px solid #00a78e;
+    border: 2px solid #00b0f5;
 }
 .mail_right textarea {
 	height:200px; 
@@ -1146,7 +1148,7 @@ ul.social-icons.two {
     padding: 13px 40px;
 }
 .mail_right input[type="submit"]:hover{
- background: #00a78e;
+ background: #00b0f5;
 	    transition: 0.5s all ease;
     -webkit-transition: 0.5s all ease;
     -moz-transition: 0.5s all ease;
@@ -1175,7 +1177,7 @@ span.border.two {
 span.border.two:after {
     content: ' ';
     position: absolute;
-    background: #00a78e;
+    background: #00b0f5;
     height: 7px;
     display: block;
     width: 73px;
@@ -1219,7 +1221,7 @@ span.border.two:after {
     margin: 1em 0;
 }
 .copy_right p a{
-    color: #00a78e;
+    color: #00b0f5;
 	text-decoration:none;
 }
 /*-- //contact --*/
@@ -1509,7 +1511,7 @@ span.border.two:after {
 		padding: 10px 10px;
 		margin-bottom: 12px;
 		outline: none;
-		border: 2px solid #00a78e;
+		border: 2px solid #00b0f5;
 		font-size: 0.9em;
 	}
 	.mail_right textarea {
@@ -1602,7 +1604,7 @@ span.border.two:after {
 	span.border.one:after {
 		content: ' ';
 		position: absolute;
-		background: #00a78e;
+		background: #00b0f5;
 		height: 7px;
 		display: block;
 		width: 73px;
@@ -1612,7 +1614,7 @@ span.border.two:after {
 	span.border.two:after {
 		content: ' ';
 		position: absolute;
-		background: #00a78e;
+		background: #00b0f5;
 		height: 7px;
 		display: block;
 		width: 73px;
@@ -1745,7 +1747,7 @@ span.border.two:after {
 		font-size: 1.8em;
 	}
 	.logo span {
-		border: 7px solid #00a78e;
+		border: 7px solid #00b0f5;
 		padding: 0px 10px;
 		font-size: 1.2em;
 	}
